--- a/chatrooms/templates/chatrooms/base.html
+++ b/chatrooms/templates/chatrooms/base.html
@@ -8,43 +8,25 @@
 
     <body>
         {% block nav %}
-        <nav class="navbar navbar-default" role="navigation">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header" id="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Chat</a>
-                </div>
-        
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse navbar-ex1-collapse">
-                    <ul class="nav navbar-nav">
-                        {% if not user.is_authenticated %}
-                            <li><a href="/login/">Login</a></li>
-                            <li><a href="/register/">Register</a></li>
-                        {% endif %}
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-            </div>
-        </nav>
-            
-        {% endblock nav %}
-        <div class="container-fluid container-wrapper">
-            {% if messages %}
-                <div class="messages">
-                    {% for message in messages %}
-                        <div class="alert {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}alert-danger{% endif %}">
-                            {{ message }}
-                        </div>                        
-                    {% endfor %}                                    
-                </div>
+        <div class="container-fluid main-menu">
+            <div class="brand">Chat</div>
+            {% if not user.is_authenticated %}
+                <li><a href="/login/">Login</a></li>
+                <li><a href="/register/">Register</a></li>
             {% endif %}
-    
+        </div>
+        {% endblock nav %}
+        {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                    <div class="alert {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}alert-danger{% endif %}">
+                        {{ message }}
+                    </div>                        
+                {% endfor %}                                    
+            </div>
+        {% endif %}
+
+        <div class="container-fluid container-wrapper">
             {% block container %}{% endblock container %}
         </div>
 
@@ -54,6 +36,7 @@
             <script type="text/javascript" src="/static/js/react.min.js"></script>
             <script type="text/javascript" src="/static/js/react-dom.min.js"></script>
             <script type="text/javascript" src="/static/js/main.js"></script>
+            <script type="text/javascript" src="/static/js/app.js"></script>
         {% endblock scripts %}
         {% block extra_scripts %}
         {% endblock extra_scripts %}
